HeaderComponent: Fix header buttons not showing when collapsed; clean up

--- a/timApp/static/scripts/tim/header/site-header.component.scss
+++ b/timApp/static/scripts/tim/header/site-header.component.scss
@@ -10,10 +10,6 @@
   }
 }
 
-.collapse-view-header {
-  margin-bottom: 20px;
-}
-
 .view-toggle {
   display: flex;
   margin-left: 0.5em;
